<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:padding="5dp">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp" app:srcCompat="@drawable/worki_logo_200_200"
                    android:id="@+id/avatarViewImage"/>
            <TextView
                    android:text="@string/resume_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewProfession" android:textSize="18sp"
                    android:layout_marginTop="15dp" android:layout_marginLeft="5dp" android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/resume_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewLastName" android:textSize="18sp"
                    android:layout_margin="5dp"/>
            <TextView
                    android:text="@string/resume_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewFirstName" android:textSize="18sp"
                    android:layout_margin="5dp"/>
            <TextView
                    android:text="@string/resume_middle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewMiddleName" android:textSize="18sp"
                    android:layout_margin="5dp"/>
            <TextView
                    android:text="@string/resume_about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewAboutMe" android:textSize="18sp"
                    android:layout_margin="5dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                        android:text="@string/btn_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buttonResumeEdit"
                        android:layout_margin="5dp"/>
                <Button
                        android:text="@string/btn_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buttonResumeDelete"
                        android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>